re-arrange intro.

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -154,65 +154,64 @@ To navigate in a complex social world, individual has learnt to prioritize valua
 
 {[}sentences in bracket are key ideas{]}
 
-{[}Morality is the central of human social life{]}. People make substantial amount of moral judgment in everyday life (e.g., Hofmann, Wisneski, Brandt, \& Skitka, 2014). When making these judgments, people not only judge others behavior but, more importantly, others' character (Uhlmann, Pizarro, \& Diermeier, 2015). That is, moral judgment is a way that we get information about other in the society, so that we can distinguish the good from the bad. This align with studies of person-perception in which moral character is a basic dimension of person perception in social life(Abele, Ellemers, Fiske, Koch, \& Yzerbyt, 2020; Goodwin, 2015; Goodwin, Piazza, \& Rozin, 2014; Willis \& Todorov, 2006).
+{[}Morality is the central of human social life{]}. People experience a substantial amount of moral events in everyday life (e.g., Hofmann, Wisneski, Brandt, \& Skitka, 2014). When experiencing these events, it always involves judging \enquote{right} or \enquote{wrong}, \enquote{good} or \enquote{bad}. By judging \enquote{right} or \enquote{wrong}, people may implicitly infer \enquote{good} or \enquote{bad}, i.e., moral character (Uhlmann, Pizarro, \& Diermeier, 2015). Similarly, moral character is a basic dimension of person perception (Abele, Ellemers, Fiske, Koch, \& Yzerbyt, 2020; Goodwin, 2015; Goodwin, Piazza, \& Rozin, 2014; Willis \& Todorov, 2006) and the most important aspect to evaluate the continuity of identity (Strohminger, Knobe, \& Newman, 2017).
 
-\hypertarget{morality-as-social-categorization}{%
-\subsection{Morality as social categorization}\label{morality-as-social-categorization}}
+Given the importance of moral character, to successfully navigate in a social world, a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. Maintaining a moral self-views is as important as making judgment about others' moral character (Ellemers, Toorn, Paunov, \& Leeuwen, 2019). Moral character is studied extensively both in in person perception (Abele et al., 2020; Goodwin, 2015; Goodwin et al., 2014; Willis \& Todorov, 2006) and moral self-view (Klein \& Epley, 2016; Monin \& Jordan, 2009; Strohminger et al., 2017; Tappin \& McKay, 2017). Recent theorists are trying to bring them together and emphasize a person-centered moral psychology(Uhlmann et al., 2015). In this new perspective, role of perceiver's self-relevance in morality has also been studied (e.g., Waytz, Dungan, \& Young, 2013).
 
-(McHugh, McGann, Igou, \& Kinsella, 2019): Moral judgment as categorization (MJAC);
-person-centered moral judgment
-person-perception
+To date, however, as Freeman and Ambady (2011) put it, studies in the perception of moral character didn't try to explain the perceptual process, rather, they are trying to explain the higher-order social cognitive processes that come after. Essentially, these studies are perception of moral character without perceptual process. Without knowledge of perceptual processes, we can not have a full picture of how moral character is processed in our cognition. As an increasing attention is paid to perceptual process underlying social cognition, it's clear that perceptual processes are strongly influenced by social factors, such as group-categorization, stereotype (see Xiao, Coppin, \& Bavel, 2016; Stolier \& Freeman, 2016). Given the importance of moral character and that moral character related information has strong influence on learning and memory (Carlson, Maréchal, Oud, Fehr, \& Crockett, 2020; Stanley \& De Brigard, 2019), one might expect that moral character related information could also play a role in perceptual process.
 
-People attribute the punishment to moral character instead of environmental factors (Dunlea \& Heiphetz, 2020).
+To explore the perceptual process of moral character and the underlying mechanism, we conducted a series of experiments to explore (1) whether we can detect the influence of moral character information on perceptual decision-making in a reliable way, and (2) potential explanations for the effect. In the first four experiment, we found a robust effect of good-person prioritization in perceptual decision-making. The we explore the potential explanations and tested value-based prioritization versus self-relevance-based prioritization (social-categorization (Turner, Hogg, Oakes, Reicher, \& Wetherell, 1987; Turner, Oakes, Haslam, \& McGarty, 1994)). These results suggested that people may categorize self and other based on moral character; in these categorizations, the core self, i.e., the good-self, is the core of categorization.
 
-\hypertarget{self-as-an-object-of-moral-categorization-i-am-a-good-person}{%
-\subsection{Self as an object of moral categorization: I am a good person}\label{self-as-an-object-of-moral-categorization-i-am-a-good-person}}
+\hypertarget{perceptual-process-of-moral-character}{%
+\subsection{Perceptual process of moral character}\label{perceptual-process-of-moral-character}}
 
-Social life: treat people the same way as we expect people to treat yourself.
-a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person.
-Motivation to maintain good-self
+{[}exp1a, b, c, and exp2{]}
 
-\hypertarget{from-good-me-to-good-us-spontaneous-good-self-referential-in-moral-categorization}{%
-\subsection{From good me to good us: Spontaneous good-self referential in moral categorization}\label{from-good-me-to-good-us-spontaneous-good-self-referential-in-moral-categorization}}
+{[}using associative learning task to study the moral character's influence on perception{]} Though it is theoretically possible that moral character related information may be prioritized in perceptual process, no empirical studies had directly explored this possibility. There were only a few studies about the temporal dynamics of judging the trustworthiness of face (e.g., Dzhelyova, Perrett, \& Jentzsch, 2012), but trustworthy is not equal to morality.
 
-Integrate self-categorization in moral judgment: an implicit good-me/good-we assumption (Role of self in attractor model)
+One difficulty of studying the perceptual process of moral character is that moral character is an inferred trait instead of observable feature. usually, one needs necessary more sensory input, e.g., behavior history, to infer moral character of a person. For example, Anderson et al. (2011) asked participant to first study the behavioral description of faces and then asked them to perform a perceptual detection task. They assumed that by learning the behavioral description of a person (represented by a face), participants can acquire the moral related information about faces, and the associations could then bias the perceptual processing of the faces (but see Stein, Grubb, Bertrand, Suh, and Verosky (2017)). One drawback of this approach is that participants may differ greatly when inferring the moral character of the person from behavioral descriptions, given that notion what is morality itself is varying across population (Henrich, Heine, \& Norenzayan, 2010) and those descriptions and faces may themselves are idiosyncratic, therefore, introduced large variation in experimental design.
 
-\emph{self-categorization} and \emph{variable self}
+An alternative is to use abstract semantic concepts. Abstract concepts of moral character are used to describe and represent moral characters. These abstract concepts may be part of a dynamic network in which sensory cue, concrete behaviors and other information can activate/inhibit each other (e.g., aggressiveness) (Amodio, 2019; Freeman \& Ambady, 2011). If a concept of moral character (e.g., good person) is activated, it should be able to influence on the perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster (Gantman \& Van Bavel, 2014, but see, @firestone\_enhanced\_2015). If moral character is an important in person perception, then, just as those other information such as races and stereotype (see Xiao et al., 2016), moral character related concept might change the perceptual processes.
 
-Given the importance of moral character, to successfully navigate in social world, a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. The former was traditionally investigated as person perception in social psychology, while the latter was studied separately as moral self concept (Monin \& Jordan, 2009). As for the former question, abundant of evidence revealed that people weigh morality heavily in evaluating others (Goodwin, 2015) and evaluating the change of identity of others (Strohminger, Knobe, \& Newman, 2017). These findings suggest that morality has been internalized standard for how people perceiving and remembering other people.
+To investigate the above possibility, we used an associative learning paradigm to study how moral character concept change perceptual decision-making. In this paradigm, simple geometric shapes were paired with different words whose dominant meaning is describing the moral character of a person. Participants first learn the associations between shapes and words, e.g., triangle is a good-person. After building direct association between the abstract moral characters and visual cues, participants then perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but had also proven useful in studying other concepts like social group (Enock, Hewstone, Lockwood, \& Sui, 2020; Enock, Sui, Hewstone, \& Humphreys, 2018). By using simple and morally neutral shapes, we controlled the variations caused by visual cues.
 
-When it comes to self perception, there is accumulating evidence that people actively maintain a good moral-self image. For example, recent research found that self-enhancement effect is stronger than that in competence or sociability (Tappin \& McKay, 2017). Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating)(Monin \& Jordan, 2009). Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things (Klein \& Epley, 2016). In other words, existing evidence supported the notion that morality is important in person perception and self-concept, people are motivated to maintain a good moral-self image.
+Our first question is, whether the words used the in the associative paradigm is really related to the moral character? As we reviewed above, previous theories, especially the interactive dynamic theory, would support this assumption. To validate that moral character concepts activated moral character as a social cue, we used four experiments to explore and validate the paradigm. The first experiment directly adopted associative paradigm and change the words from \enquote{self}, \enquote{friend}, and \enquote{stranger} to \enquote{good-person}, \enquote{neutral-person}, and \enquote{bad-person}. Then, we change the words to the ones that have more explicit moral meaning (\enquote{kind-person}, \enquote{neutral-person}, and \enquote{evil-person}). Then, as in Anderson et al. (2011), we asked participant to learn the association between three different behavioral histories and three different names, and then use the names, as moral character words, for associative learning. Finally, we also tested that simultaneously present shape-word pair and sequentially present word and shape didn't change the pattern. All of these four experiments showed a robust effect of moral character, that is, the positive moral character associated stimuli were prioritized.
 
-{[}whether moral character information influence perception?, link to exp1a, b, c, and exp2{]} However, as Freeman and Ambady (2011) put it, the focus of the studies in person perception and moral self-concept is not to explain the perceptual process, rather, they are explaining the higher-order social cognitive processes that come after. That is, current studies on person perception are perception without perceptual process. Without knowledge of perceptual processes, we can not have a full picture of how moral information is processed in our cognition. As an increasing attention is paid to perceptual process underlying social cognition, it's clear that perceptual processes are strongly influenced by social factors, such as group-categorization, stereotype (see Xiao, Coppin, \& Bavel, 2016; Stolier \& Freeman, 2016). Given the importance of moral character and that moral character related information has strong influence on learning and memory (Carlson, Maréchal, Oud, Fehr, \& Crockett, 2020; Stanley \& De Brigard, 2019), one might expect that moral character related information could also play a role in perceptual process.
+\hypertarget{morality-as-a-social-categorization}{%
+\subsection{Morality as a social-categorization?}\label{morality-as-a-social-categorization}}
 
-{[}using associative learning task to study the moral character's influence on perception{]} Though theoretically possible, no empirical studies had directly addressed this issue. There were only a few studies about the temporal dynamics of judging the trustworthiness of face (e.g., Dzhelyova, Perrett, \& Jentzsch, 2012), but trustworthy is not equal to morality. One difficulty of studying moral character's influence on perceptual decision-making is that moral character is a high-level and hidden state instead of observable feature. usually, one needs necessary information, e.g., behavior history, to infer moral character of a person. For example, Anderson et al. (2011) asked participant to first study the behavioral description of faces and then asked participant to perform a perceptual detection task. They assumed that by learning the behavioral description of a person (represented by a face), participants could acquire the moral related information about that face, and this association would then bias the perceptual processing of the faces (but see Stein, Grubb, Bertrand, Suh, and Verosky (2017)). However, one drawback of this approach is that participants may differ greatly when inferring the moral character of the person from behavioral descriptions, given that notion what is morality itself is varying across population (Henrich, Heine, \& Norenzayan, 2010) and those descriptions and faces may themselves are idiosyncratic, therefore, introduced large variation in experimental design.
+{[}possible explanations: person-based self-categorization vs.~stimuli-based valence{]} The robust pattern from our first four experiment suggested that there are some reliable mechanisms underneath the effect. One possible explanation is the value-based attention, which suggested that valuable stimuli is prioritized in our low-level cognitive processes. Because positive moral character is potentially rewarding, e.g., potential cooperators, it is valuable to individuals and therefore being prioritized. There are also evidence consistent with this idea {[}{]}. For example, XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. This explanation has an implicit assumption, that is, participants were automatically viewing these stimuli as self-relevant (Juechems \& Summerfield, 2019; Reicher \& Hopkins, 2016) and threatening/rewarding because of their semantic meaning. In this explanation, we will view the moral concept, and the moral character represented by the concept, as objects and only judge whether they are rewarding/threatening or potentially rewarding/threatening to us.
 
-An alternative is to use abstract semantic concepts to study how these concepts influence perception. Abstract concepts of moral character is part of our daily life and it can be used to represent rich information. These abstract concepts is part of a dynamic network in which sensory cue, concrete behaviors and other information can activate/inhibit each other (e.g., aggressiveness) (Amodio, 2019; Freeman \& Ambady, 2011). If a concept of moral character (e.g., good person) is activated, it should also be able to influence on the perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster (Gantman \& Van Bavel, 2014, but see @firestone\_enhanced\_2015). If moral character is an important in person perception, then, just as those other information such as races, education, (see Xiao et al., 2016), moral character related information might change the perceptual processes.
+Another possibility is that we will perceive those moral character as person and automatic categorize whether they are ingroup or ougroup, that is, the social categorization process. This account assumed that moral character served as a way to categorize other. In the first four experiments' situation, the identity of the moral character is ambiguous, participants may automatically categorize morally good people as ingroup and therefore preferentially processed these information.
 
-To investigate the above possibility, we used an associative learning paradigm to study how moral character concept change perceptual decision-making. In this paradigm, simple geometric shapes were paired with different words whose dominant use is to describe the moral character of person. Participants first learn the associations between shapes and words, i.e.~triangle is a good-person, i.e., building direct association between high-level, hidden moral characters and visual cues. After remembered the associations, they perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but had also proven useful in studying other concepts like social group (Enock, Sui, Hewstone, \& Humphreys, 2018). By using simple and morally neutral shapes, we controlled the variations caused by visual cues.
+However, the above four experiments can not distinguish between these two possibilities, because the concept \enquote{good-peron} can both be rewarding and be categorized as ingroup memeber, and previous studies using associative learning paradigm revealed that both rewarding stimuli (e.g., Sui, He, \& Humphreys, 2012) and in-group information {[}Enock et al. (2018); enock\_overlap\_2020{]} are prioritized.
 
-Our first question is, whether the words used the in the associative paradigm is really related to the moral character? As we reviewed above, previous theories, especially the interactive dynamic theory, would support this assumption. To validate that moral character concepts activated moral character as a social cue, we used four experiments to explore and validate the paradigm. The first experiment direct adopted associative paradigm and change the words from \enquote{self}, \enquote{other} to \enquote{good-person}, \enquote{neutral-person}, and \enquote{bad-person}. Then, we change the words to the ones that have more explicit moral meaning (\enquote{kind-person}, \enquote{neutral-person}, and \enquote{evil-person}). Then, as in Anderson et al. (2011), we asked participant to learn the behavioral history of three different names, and then use the names, as moral character words, for associative learning. Finally, we also tested that simultaneously present shape-word pair and sequentially present word and shape didn't change the pattern. All of these four experiments showed a robust effect of moral character, that is, the positive moral character associated stimuli were prioritized.
+{[}Distinguish two explanations by make self salient, exp3a, 3b, 6b{]} Though these two frameworks can both account for the positivity effect found in first four experiments (i.e., prioritization of \enquote{good-person}, but not \enquote{neutral person} and \enquote{bad person}), they have different prediction if the experiment design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe both self and other. In this case the identity become salient and participants are less likely to spontaneously identify a good-person other than self as the extension of self, but the value of good-person still exists. Actually, the rewarding value of good-other might be even stronger than good-self because the former indicate potential cooperation and material rewards, but the latter is more linked to personal belief. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in Hu, Lan, Macrae, and Sui (2020), people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as \enquote{self} while all the others categories were excluded.
 
-{[}possible explanations: person-based self-categorization vs.~stimuli-based valence{]} Then, we explored the underlying mechanism. One possible explanation is the value-based attention, which suggested that valuable stimuli is prioritized in our low-level cognitive processes. Because positive moral character is potentially rewarding, e.g., potential cooperators, it is valuable to individuals and therefore being prioritized. There are also evidence consistent with this idea {[}{]}. For example, XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. This explanation has an implicit assumption, that is, participants were automatically viewing these stimuli as self-relevant (Juechems \& Summerfield, 2019; Reicher \& Hopkins, 2016) and threatening/rewarding because of their semantic meaning. In this explanation, we will view the moral concept, and the moral character represented by the concept, as objects and only judge whether they are rewarding/threatening or potentially rewarding/threatening to us. A different view is that we will perceive those moral character as person and apply social categorization, i.e., we categorize whether the person with the moral character is in the same group as we do (Turner, Oakes, Haslam, \& McGarty, 1994). However, the above four experiments can not distinguish between these two possibilities, because there are evidence for both reward- (e.g., Sui, He, \& Humphreys, 2012) and in-group (Enock et al., 2018) prioritization.
+In exp 3a, 3b, and 6b, we found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e.~the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A mini-meta-analysis showed that there was no effect of valence when the identity is other. This results showed that value-based attention is not likely explained the pattern we observed in first four experiments. Why good-self is prioritized is less clear. Besides the social-categorization explanation, it's also possible that good self is so unique that it is prioritized in all possible situation and therefore is not social categorization per se.
 
-{[}Distinguish two explanations by make self salient, exp3a, 3b, 6b{]} Though these two frameworks can both account for the positivity effect found in first four experiments (i.e., prioritization of \enquote{good-person}, but not \enquote{neutral person} and \enquote{bad person}), they have different prediction if the experiment design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe both self and other. In this case the identity become salient and participants are less likely to spontaneously identify a good-person other than self as in-group, but the value of good-person still exists. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in Hu, Lan, Macrae, and Sui (2020), people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as \enquote{self} while all the others categories were excluded.
-
-In exp 3a, 3b, and 6b, we found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e.~the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A mini-meta-analysis showed that there was no effect of valence when the identity is other.
-
-{[}what we care? valence of the self exp4a or identity of the good exp4b?{]} Next, we go further to disentangle the good-self complex: people care more about whether the self is good, or whether the good is self, or both? If people care more about whether the self is good, then, subtle cue of the valence may have an impact on perceptual process of the self. In contrast, if people care more about whether the good's identity, i.e., whether the good is self, then subtle cue of identity (self v. other) may have a impact on perceptual process of the good. We tested the good-self complex with two more experiments. In exp 4a (id is task-relevant, valence is task-irrelevant), if people care about the valence of the self, then, the task-irrelevant information may influence the processing of the self. While in exp 4b (valence is task-relevant, id is task-irrelevant), if people care about the id of the good, then, the task-irrelevant id information will has a influence on the process of the good.
+{[}what we care? valence of the self exp4a or identity of the good exp4b?{]} We go further to disentangle the good-self complex: is it because the special role of good-self or because of social categorization. We designed two complementary experiments. in experiment 4a, participants only learned the association between self and other, the words \enquote{good-person}, \enquote{neutral person}, and \enquote{bad person} were presented as task-irrelevant stimuli, while in experiment 4b, participants learned the associations between \enquote{good-person}, \enquote{neutral-person}, and \enquote{bad-person}, and the \enquote{self} and \enquote{other} were presented as task-irrelevant stimuli. These two experiment can be used to distinguish the \enquote{good-self} as anchor account and the \enquote{good-self-based social categorization} account. If good-self as an anchor is true, then, in both experiment, good-self will show advantage over other stimuli. More specifically, in experiment 4a, in the self condition, there will be advantage for good as task-irrelevant condition than the other two self conditions; in experiment 4b, in the good condition, there will be an advantage for self as task-irrelevant condition over other as task-irrelevant condition. If good-self-based social categorization if true, then, the prioritization effect will depends on whether the stimuli can be categorized as the same group of good-self. More specifically, in experiment 4a, there will be good-as-task-irrelevant stimuli than other condition in self conditions, this prediction is the same as the \enquote{good-self as anchor} account; however, for experiment 4b, there will be no self-as-task-irrelevant stimuli than other-as-task-irrelevant condition.
 
 {[}Good self in self-reported data{]} As an exploration, we also collected participants' self-reported psychological distance between self and good-person, bad-person, and neutral-person. We explored the general pattern and the correlation between self-reported distance and reaction-based indices.
 
-{[}whether categorize self as positive is not limited to morality{]} Finally, we explored the pattern is generalized to all positive traits or only to morality. We found that self-categorization is not limited to morality, even morality is central to social life. we used aesthetic aspect as another instance.
+{[}whether categorize self as positive is not limited to morality{]} Finally, we explored the pattern is generalized to all positive traits or only to morality. We found that self-categorization is not limited to morality, but a special case of categorization in perpetual processing.
 
 Key concepts and discussing points:
-\emph{Self-categories} are cognitive groupings of self and some class of stimuli as identical or different from some other class. {[}Turner et al.{]}
-\emph{Personal identity} refers to self-categories that define the individual as a unique person in terms of his or her individual differences from other (in-group) persons.
-\emph{Social identity} refers to the shared social categorical self (\enquote{us} vs.~\enquote{them}).
-\emph{variable self}: Who we are, how we see ourselves, how we define our relations to others (indeed whether they are construed as \enquote{other} or as part of the extended \enquote{we} self) is different in different settings.
-\emph{Identification}: the degree to which an individual feels connected to an ingroup or includes the ingroup in his or her self-concept. (self is not bad; )
-Morality as a way for social-categorization? People are more likely to identify themselves with trustworthy faces (Verosky \& Todorov, 2010) (trustworthy faces has longer RTs).
+
+\textbf{Self-categories} are cognitive groupings of self and some class of stimuli as identical or different from some other class. {[}Turner et al.{]}
+
+\textbf{Personal identity} refers to self-categories that define the individual as a unique person in terms of his or her individual differences from other (in-group) persons.
+
+\textbf{Social identity} refers to the shared social categorical self (\enquote{us} vs.~\enquote{them}).
+
+\textbf{Variable self}: Who we are, how we see ourselves, how we define our relations to others (indeed whether they are construed as \enquote{other} or as part of the extended \enquote{we} self) is different in different settings.
+
+\textbf{Identification}: the degree to which an individual feels connected to an ingroup or includes the ingroup in his or her self-concept. (self is not bad; )
+
+Morality as a way for social-categorization (McHugh, McGann, Igou, \& Kinsella, 2019)? People are more likely to identify themselves with trustworthy faces (Verosky \& Todorov, 2010) (trustworthy faces has longer RTs).
+
 What is the relation between morally good and self in a semantic network (attractor network) (Freeman \& Ambady, 2011).
+
 How to deal with the \emph{variable self} (self-categorization theory) vs.~\emph{core/true/authentic self} vs.~\emph{self-enhancement}
 
 \textbf{Limitations}:
@@ -1469,11 +1468,14 @@ Cooper, H., Hedges, L. V., \& Valentine, J. C. (2009). \emph{The handbook of res
 \leavevmode\hypertarget{ref-DeCarlo_1998}{}%
 DeCarlo, L. T. (1998). Signal detection theory and generalized linear models. \emph{Psychological Methods}, \emph{3}(2), 186--205. Journal Article. \url{https://doi.org/10.1037/1082-989X.3.2.186}
 
-\leavevmode\hypertarget{ref-dunlea_childrens_2020}{}%
-Dunlea, J. P., \& Heiphetz, L. (2020). Children's and adults' understanding of punishment and the criminal justice system. \emph{Journal of Experimental Social Psychology}, \emph{87}, 103913. \url{https://doi.org/10.1016/j.jesp.2019.103913}
-
 \leavevmode\hypertarget{ref-dzhelyova_temporal_2012}{}%
 Dzhelyova, M., Perrett, D. I., \& Jentzsch, I. (2012). Temporal dynamics of trustworthiness perception. \emph{Brain Research}, \emph{1435}, 81--90. \url{https://doi.org/10.1016/j.brainres.2011.11.043}
+
+\leavevmode\hypertarget{ref-ellemers_psychology_2019}{}%
+Ellemers, N., Toorn, J. van der, Paunov, Y., \& Leeuwen, T. van. (2019). The psychology of morality: A review and analysis of empirical studies published from 1940 through 2017. \emph{Personality and Social Psychology Review}, \emph{23}(4), 332--366. \url{https://doi.org/10.1177/1088868318811759}
+
+\leavevmode\hypertarget{ref-enock_overlap_2020}{}%
+Enock, F. E., Hewstone, M. R. C., Lockwood, P. L., \& Sui, J. (2020). Overlap in processing advantages for minimal ingroups and the self. \emph{Scientific Reports}, \emph{10}(1), 18933. \url{https://doi.org/10.1038/s41598-020-76001-9}
 
 \leavevmode\hypertarget{ref-enock_self_2018}{}%
 Enock, F., Sui, J., Hewstone, M., \& Humphreys, G. W. (2018). Self and team prioritisation effects in perceptual matching: Evidence for a shared representation. \emph{Acta Psychologica}, \emph{182}, 107--118. \url{https://doi.org/10.1016/j.actpsy.2017.11.011}
@@ -1568,6 +1570,9 @@ Sui, J., He, X., \& Humphreys, G. W. (2012). Perceptual effects of social salien
 \leavevmode\hypertarget{ref-tappin_illusion_2017}{}%
 Tappin, B. M., \& McKay, R. T. (2017). The illusion of moral superiority. \emph{Social Psychological and Personality Science}, \emph{8}(6), 623--631. \url{https://doi.org/10.1177/1948550616673878}
 
+\leavevmode\hypertarget{ref-turner_rediscovering_1987}{}%
+Turner, J. C., Hogg, M. A., Oakes, P. J., Reicher, S. D., \& Wetherell, M. S. (1987). \emph{Rediscovering the social group: A self-categorization theory}. Cambridge, MA, US: Basil Blackwell.
+
 \leavevmode\hypertarget{ref-turner_self_1994}{}%
 Turner, J. C., Oakes, P. J., Haslam, S. A., \& McGarty, C. (1994). Self and collective: Cognition and social context. \emph{Personality and Social Psychology Bulletin}, \emph{20}(5), 454--463. \url{https://doi.org/10.1177/0146167294205002}
 
@@ -1576,6 +1581,9 @@ Uhlmann, E. L., Pizarro, D. A., \& Diermeier, D. (2015). A person-centered appro
 
 \leavevmode\hypertarget{ref-verosky_differential_2010}{}%
 Verosky, S. C., \& Todorov, A. (2010). Differential neural responses to faces physically similar to the self as a function of their valence. \emph{NeuroImage}, \emph{49}(2), 1690--1698. \url{https://doi.org/10.1016/j.neuroimage.2009.10.017}
+
+\leavevmode\hypertarget{ref-waytz_whistleblowers_2013}{}%
+Waytz, A., Dungan, J., \& Young, L. (2013). The whistleblower's dilemma and the fairness--loyalty tradeoff. \emph{Journal of Experimental Social Psychology}, \emph{49}(6), 1027--1033. \url{https://doi.org/10.1016/j.jesp.2013.07.002}
 
 \leavevmode\hypertarget{ref-wiecki_hddm_2013}{}%
 Wiecki, T. V., Sofer, I., \& Frank, M. J. (2013). HDDM: Hierarchical bayesian estimation of the drift-diffusion model in python. \emph{Frontiers in Neuroinformatics}, \emph{7}. \url{https://doi.org/10.3389/fninf.2013.00014}
