--- a/endnote.bib
+++ b/endnote.bib
@@ -967,6 +967,27 @@ Publisher: American Psychological Association},
 }
 
 
+@article{enock_overlap_2020,
+	title = {Overlap in processing advantages for minimal ingroups and the self},
+	volume = {10},
+	rights = {2020 The Author(s)},
+	issn = {2045-2322},
+	url = {https://www.nature.com/articles/s41598-020-76001-9},
+	doi = {10.1038/s41598-020-76001-9},
+	abstract = {Cognitive biases shape our perception of the world and our interactions with other people. Information related to the self and our social ingroups is prioritised for cognitive processing and can therefore form some of these key biases. However, ingroup biases may be elicited not only for established social groups, but also for minimal groups assigned by novel or random social categorisation. Moreover, whether these ‘ingroup biases’ are related to self-processing is unknown. Across three experiments, we utilised a social associative matching paradigm to examine whether the cognitive mechanisms underpinning the effects of minimal groups overlapped with those that prioritise the self, and whether minimal group allocation causes early processing advantages. We found significant advantages in response time and sensitivity (dprime) for stimuli associated with newly-assigned ingroups. Further, self-biases and ingroup-biases were positively correlated across individuals (Experiments 1 and 3). However, when the task was such that ingroup and self associations competed, only the self-advantage was detected (Experiment 2). These results demonstrate that even random group allocation quickly captures attention and enhances processing. Positive correlations between the self- and ingroup-biases suggest a common cognitive mechanism across individuals. These findings have implications for understanding how social biases filter our perception of the world.},
+	pages = {18933},
+	number = {1},
+	journaltitle = {Scientific Reports},
+	author = {Enock, Florence E. and Hewstone, Miles R. C. and Lockwood, Patricia L. and Sui, Jie},
+	urldate = {2020-11-05},
+	date = {2020-11-03},
+	langid = {english},
+	note = {Number: 1
+Publisher: Nature Publishing Group},
+	file = {Full Text PDF:/home/hcp4715/Zotero/storage/85LJI65T/Enock et al. - 2020 - Overlap in processing advantages for minimal ingro.pdf:application/pdf;Snapshot:/home/hcp4715/Zotero/storage/ZNVGD3ZA/s41598-020-76001-9.html:text/html}
+}
+
+
 @article{hofmann_morality_2014,
 	title = {Morality in everyday life},
 	volume = {345},
@@ -1056,8 +1077,7 @@ Publisher: American Psychological Association},
 	author = {Firestone, Chaz and Scholl, Brian J.},
 	urldate = {2020-10-26},
 	date = {2015-03},
-	langid = {english},
-	file = {Firestone and Scholl - 2015 - Enhanced visual awareness for morality and pajamas.pdf:/home/hcp4715/Zotero/storage/C2FS4XN4/Firestone and Scholl - 2015 - Enhanced visual awareness for morality and pajamas.pdf:application/pdf}
+	langid = {english}
 }
 
 @book{turner_rediscovering_1987,
@@ -1199,4 +1219,45 @@ Publisher: American Psychological Association},
 	date = {2013-11},
 	langid = {english},
 	file = {Waytz et al. - 2013 - The whistleblower's dilemma and the fairness–loyal.pdf:/home/hcp4715/Zotero/storage/FQJ5LYHX/Waytz et al. - 2013 - The whistleblower's dilemma and the fairness–loyal.pdf:application/pdf}
+}
+
+@article{ellemers_psychology_2019,
+	title = {The Psychology of Morality: A Review and Analysis of Empirical Studies Published From 1940 Through 2017},
+	volume = {23},
+	issn = {1088-8683},
+	url = {https://doi.org/10.1177/1088868318811759},
+	doi = {10.1177/1088868318811759},
+	shorttitle = {The Psychology of Morality},
+	abstract = {We review empirical research on (social) psychology of morality to identify which issues and relations are well documented by existing data and which areas of inquiry are in need of further empirical evidence. An electronic literature search yielded a total of 1,278 relevant research articles published from 1940 through 2017. These were subjected to expert content analysis and standardized bibliometric analysis to classify research questions and relate these to (trends in) empirical approaches that characterize research on morality. We categorize the research questions addressed in this literature into five different themes and consider how empirical approaches within each of these themes have addressed psychological antecedents and implications of moral behavior. We conclude that some key features of theoretical questions relating to human morality are not systematically captured in empirical research and are in need of further investigation.},
+	pages = {332--366},
+	number = {4},
+	journaltitle = {Personality and Social Psychology Review},
+	shortjournal = {Pers Soc Psychol Rev},
+	author = {Ellemers, Naomi and van der Toorn, Jojanneke and Paunov, Yavor and van Leeuwen, Thed},
+	urldate = {2020-11-03},
+	date = {2019-11-01},
+	langid = {english},
+	note = {Publisher: {SAGE} Publications Inc},
+	file = {SAGE PDF Full Text:/home/hcp4715/Zotero/storage/T7XVXXQD/Ellemers et al. - 2019 - The Psychology of Morality A Review and Analysis .pdf:application/pdf}
+}
+
+@article{van_der_lee_or_2017,
+	title = {In or out? How the perceived morality (vs. competence) of prospective group members affects acceptance and rejection},
+	volume = {47},
+	rights = {Copyright © 2017 John Wiley \& Sons, Ltd.},
+	issn = {1099-0992},
+	url = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ejsp.2269},
+	doi = {10.1002/ejsp.2269},
+	shorttitle = {In or out?},
+	abstract = {When is an individual likely to be accepted or rejected by a group? This research investigates responses towards prospective group members depending on how they compare to the group in terms of their perceived morality or competence. Because morality is of particular importance to groups, we hypothesized that the perceived morality of prospective group members has more impact on the group's tendency to accept versus reject them than their competence. Across three experiments, employing self-report, psychophysiological and behavioural measures, results supported this hypothesis: Immoral (vs. incompetent) individuals were perceived as more different from the group and were more likely to be rejected. Additionally, the rejection of prospective group members with perceived inferior morality (but not those with inferior competence) was mediated by the group threat they imply. Inclusion success thus seems to be mainly contingent upon how a group evaluates the individual's morality relative to the group's standards.},
+	pages = {748--762},
+	number = {6},
+	journaltitle = {European Journal of Social Psychology},
+	author = {Van der Lee, Romy and Ellemers, Naomi and Scheepers, Daan and Rutjens, Bastiaan T.},
+	urldate = {2020-11-03},
+	date = {2017},
+	langid = {english},
+	note = {\_eprint: https://onlinelibrary.wiley.com/doi/pdf/10.1002/ejsp.2269},
+	keywords = {morality, competence, threat, deviance, exclusion, intragroup processes},
+	file = {Snapshot:/home/hcp4715/Zotero/storage/2DBJWIKZ/ejsp.html:text/html;Full Text:/home/hcp4715/Zotero/storage/6TXIQYWG/Lee et al. - 2017 - In or out How the perceived morality (vs. compete.pdf:application/pdf;Snapshot:/home/hcp4715/Zotero/storage/MJPH3L8T/ejsp.html:text/html}
 }
