--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -79,74 +79,62 @@ knitr::opts_chunk$set(cache.extra = knitr::rand_seed)
 
 [sentences in bracket are key ideas]
 
-[Morality is the central of human social life]. People make substantial amount of moral judgments in everyday life [e.g., @hofmann_morality_2014]. When making these judgments, people not only judge others behavior but, more importantly, others' character [@uhlmann_person-centered_2015]. That is, moral judgment is a way we assess the moral character of others, so that we can distinguish the good from the bad. Similarly, moral character is a basic dimension of person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and the most important aspect to evaluate the continuity of identity [@strohminger_true_2017]. The importance of moral character in moral judgment and person perception suggested that morality has a strong influence on our cognition.
+[Morality is the central of human social life]. People experience a substantial amount of moral events in everyday life [e.g., @hofmann_morality_2014]. When experiencing these events, it always involves judging "right" or "wrong", "good" or "bad". By judging "right" or "wrong", people may implicitly infer "good" or "bad", i.e., moral character [@uhlmann_person-centered_2015]. Similarly, moral character is a basic dimension of person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and the most important aspect to evaluate the continuity of identity [@strohminger_true_2017]. 
 
-Given the importance of moral character, to successfully navigate in a social world, a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. The former has been extensively studied in person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and recently also attracted much attention in moral psychology [@uhlmann_person-centered_2015], while the latter was usually studied separately as as moral self concept [@monin_dynamic_2009; @strohminger_true_2017] or self-perception [@klein_maybe_2016; @tappin_illusion_2017]. Only recently, investigators started to explore the role of perceiver's self-relevance in moral judgment [e.g., @waytz_whistleblowers_2013]. To date, few studies addressed (1) the perceptual process of moral character and (2) the relationship between perceiving moral character of self and other. We explore the perceptual process of moral character of self and other by using associative learning task and propose that the results can be explained by social-categorization theory[@turner_self_1994; @turner_rediscovering_1987]. That is, people had a moral character-based categorization which is based on the core self: good-self.
+Given the importance of moral character, to successfully navigate in a social world, a person needs to both accurately evaluate others' moral character and behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. Maintaining a moral self-views is as important as making judgment about others' moral character [@ellemers_psychology_2019]. Moral character is studied extensively both in in person perception [@goodwin_moral_2014; @goodwin_moral_2015; @abele_navigating_2020; @willis_first_2006] and moral self-view [@monin_dynamic_2009; @strohminger_true_2017; @klein_maybe_2016; @tappin_illusion_2017]. Recent theorists are trying to bring them together and emphasize a person-centered moral psychology[@uhlmann_person-centered_2015]. In this new perspective, role of perceiver's self-relevance in morality has also been studied [e.g., @waytz_whistleblowers_2013]. 
 
-## Moral judgment as a social categorization process
+To date, however, as @freeman_dynamic_2011 put it, studies in the perception of moral character didn't try to explain the perceptual process, rather, they are trying to explain the higher-order social cognitive processes that come after. Essentially, these studies are perception of moral character without perceptual process. Without knowledge of perceptual processes, we can not have a full picture of how moral character is processed in our cognition. As an increasing attention is paid to perceptual process underlying social cognition, it's clear that perceptual processes are strongly influenced by social factors, such as group-categorization, stereotype [see @xiao_perceiving_2016;@stolier_functional_2016]. Given the importance of moral character and that moral character related information has strong influence on learning and memory [@stanley_moral_2019; @carlson_motivated_2020], one might expect that moral character related information could also play a role in perceptual process.
 
-[Moral judgment is a process of categorization] Morality is thought as a evolved system that makes the social life possible, promote the cooperation between strangers. As complex as morality is, one major function is to help people avoid potential free-riders [] or other norm-violators that might cause problem in the community [rejected by the community]. From this perspective, morality served as a standard for people to judge whether someone belongs to a social group that adhere the social norm and is a cooperator in social life. Recent theories in moral psychology also started to recognized the importance of person as the unit of analysis [@uhlmann_person-centered_2015]. For example, @mchugh_moral_2019 proposed that moral judgment is a way to categorization (MJAC), which depends on context and goal of the agent who making the judgment. Recent findings also revealed that people tend to attribute the punishment to moral character instead of environmental factors [@dunlea_childrens_2020], and that moral character interact with moral judgment [].
+To explore the perceptual process of moral character and the underlying mechanism, we conducted a series of experiments to explore (1) whether we can detect the influence of moral character information on perceptual decision-making in a reliable way, and (2) potential explanations for the effect. In the first four experiment, we found a robust effect of good-person prioritization in perceptual decision-making. The we explore the potential explanations and tested value-based prioritization versus self-relevance-based prioritization (social-categorization [@turner_self_1994; @turner_rediscovering_1987]). These results suggested that people may categorize self and other based on moral character; in these categorizations, the core self, i.e., the good-self, is the core of categorization.
 
-[role of self of the "judge" in moral judgment] However, why people need to categorize other as the good and the bad had not been explicitly studied. Most studies in moral judgment implicitly assumed that perceivers of moral behaviors, who then makes moral judgment about these behaviors, are neutral parties, viewing others' moral behaviors from "bird-view". This "asocial perceiver" approach [e.g., @hester_moral_2020] ignored the fact that people who make the judgment themselves has their own motivations, goals, and preferences. In reality, when people categorized people based on moral standard, they do so based on representations of the consequences of the behavior, actor's belief, intention, and knowledge [], and, more importantly, how these representations related to oneself or one's ingroup. That is, self-relevance is crucial in making moral judgment. This is exactly social categorization theory had tried to account. When some unethical things happen, people may had no emotional response or even pay attention to response if they categorize the actor or the victim are not relevant to themselves [e.g., @reicher_perception_2016]. Other studies also suggested that when the victim or the agent is an in-group of the perceivers of the moral event, the moral judgment becomes different []. In the same vein, when moral character don't bring damage to onself, people may prefer immoral character because those bad characters are more self-like [@krause_can_2020]. These studies suggested that morality is not merely a categorization, but a social categorization that based on self-relevance. 
+## Perceptual process of moral character
 
-[Morality is social categorization: categorize self-other] Therefore, we propose that moral judgment as a social categorization, i.e., judge whether others are ingroup, the good as an extension of self; and outgroup, the bad are distinct from the self. A essentially similar but different perspective had been proposed by @descioli_side-taking_2016, who suggested that making moral judgment is side-taking. In this sense, by judging who is moral, people know who is us, who is them.
+[exp1a, b, c, and exp2]
 
-Note that, multiple social identity may conflict, morality-based categorization may also conflict with other identity (e.g., in a same company), which lead to difficult for participants and different response across participants [@waytz_whistleblowers_2013]
+[using associative learning task to study the moral character's influence on perception] Though it is theoretically possible that moral character related information may be prioritized in perceptual process, no empirical studies had directly explored this possibility. There were only a few studies about the temporal dynamics of judging the trustworthiness of face [e.g., @dzhelyova_temporal_2012], but trustworthy is not equal to morality. 
 
-## Self as the object of moral categorization: Good-self is true-self
-Just the role of self-relevance of the perceiver/judge was largely ignored by moral psychologists, the moral character of self is also largely ignored by both researchers and lay person. However, When asked to evaluate themselves, participants usually showed a pattern that can be seen in other domain of self-evaluation: positive self-bias. Only that the positive self-bias is stronger in moral character than in other domain [@tappin_illusion_2017]. This is consistent with the importance of moral character in social life: people needs to behave in a way that she/he is perceived as a moral person, or at least not a morally bad person. 
+One difficulty of studying the perceptual process of moral character is that moral character is an inferred trait instead of observable feature. usually, one needs necessary more sensory input, e.g., behavior history, to infer moral character of a person. For example, @anderson_visual_2011 asked participant to first study the behavioral description of faces and then asked them to perform a perceptual detection task. They assumed that by learning the behavioral description of a person (represented by a face), participants can acquire the moral related information about faces, and the associations could then bias the perceptual processing of the faces (but see @stein_no_2017). One drawback of this approach is that participants may differ greatly when inferring the moral character of the person from behavioral descriptions, given that notion what is morality itself is varying across population [@henrich_weirdest_2010] and those descriptions and faces may themselves are idiosyncratic, therefore, introduced large variation in experimental design.
 
-There is accumulating evidence that people actively maintain a good moral-self image. For example, recent research found that self-enhancement effect is stronger than that in competence or sociability [@tappin_illusion_2017]. Also, participants maintain their moral self-image even after their own unethical behaviors (e.g., cheating)[@monin_dynamic_2009]. Similarly, when asked how likely they will act ethically or unethically, most participants showed the tendency of less likely to do unethical things [@klein_maybe_2016]. In other words, existing evidence supported the notion when evaluating themselves, most people are motivated to maintain a good moral-self image.
+An alternative is to use abstract semantic concepts. Abstract concepts of moral character are used to describe and represent moral characters. These abstract concepts may be part of a dynamic network in which sensory cue, concrete behaviors and other information can activate/inhibit each other (e.g., aggressiveness) [@freeman_dynamic_2011; @amodio_social_2019]. If a concept of moral character (e.g., good person) is activated, it should be able to influence on the perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster [@gantman_moral_2014, but see, @firestone_enhanced_2015]. If moral character is an important in person perception, then, just as those other information such as races and stereotype [see @xiao_perceiving_2016], moral character related concept might change the perceptual processes.
 
-All these suggest that in the morality-based social-categorization, people will categorize themselves as morally good. Then comes the question: how people reconcile the contradicting information about themselves? For example the dishonest behavior and good-self image? One possibility is that one categorized self as multifacet and only one of these selves is the true self or authentic self, other aspects of self was "distorted" by environmental facts []. This view has a long history in self study, for example, the self-discrepancies in psychology suggested that ...the ideal self, ought self, and real self, and the true self is ... In other words, people can categorize self as the categorize others and regard only part of their behavior/character as the true self. 
+To investigate the above possibility, we used an associative learning paradigm to study how moral character concept change perceptual decision-making. In this paradigm, simple geometric shapes were paired with different words whose dominant meaning is describing the moral character of a person. Participants first learn the associations between shapes and words, e.g., triangle is a good-person. After building direct association between the abstract moral characters and visual cues, participants then perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but had also proven useful in studying other concepts like social group [@enock_self_2018; @enock_overlap_2020]. By using simple and morally neutral shapes, we controlled the variations caused by visual cues.
 
-Recently studies suggested that the true self is a morally good self []. Not only people belief that true self is morally good but the true self for others share the same pattern []. That is, in social-categorization theory's term, self can be categorized as true-self vs. non-true self, and morally good self is true-self.
+Our first question is, whether the words used the in the associative paradigm is really related to the moral character? As we reviewed above, previous theories, especially the interactive dynamic theory, would support this assumption. To validate that moral character concepts activated moral character as a social cue, we used four experiments to explore and validate the paradigm. The first experiment directly adopted associative paradigm and change the words from "self", "friend", and "stranger" to "good-person", "neutral-person", and "bad-person". Then, we change the words to the ones that have more explicit moral meaning ("kind-person", "neutral-person", and "evil-person"). Then, as in @anderson_visual_2011, we asked participant to learn the association between three different behavioral histories and three different names, and then use the names, as moral character words, for associative learning. Finally, we also tested that simultaneously present shape-word pair and sequentially present word and shape didn't change the pattern. All of these four experiments showed a robust effect of moral character, that is, the positive moral character associated stimuli were prioritized. 
 
-This moral positive self-bias might be the results of unconscious memory system that favor positive moral behavior of self and amnesia of unethical behavior of others. This cognitive helps to maintain a identity that surrounded a core good-self.
+## Morality as a social-categorization?
 
-## From good me to good person: Spontaneous good-self referential in moral categorization
-If people categorize both self and other based on morality and view the good character as true self for other self and others, then, what's the relationship between the self-categorization and other-categorization? Social categorization theory suggested that social-categorization is based on self, and ingroup is an extension of the self. Also, the identity is varying across different situation. Importantly, there should be no difference in cognitive process if two person/targets were categorized in the same group.  One interesting question is: which categorization standard is more important when there are multiple standards. There are two possibilities when both self and other are labeled by different moral character: (1) people cares more about good or bad, when the good is salient, people no longer care about the identity of the good because it's ingroup already; (2) people cares more about the true self.
+[possible explanations: person-based self-categorization vs. stimuli-based valence] The robust pattern from our first four experiment suggested that there are some reliable mechanisms underneath the effect. One possible explanation is the value-based attention, which suggested that valuable stimuli is prioritized in our low-level cognitive processes. Because positive moral character is potentially rewarding, e.g., potential cooperators, it is valuable to individuals and therefore being prioritized. There are also evidence consistent with this idea []. For example, XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. This explanation has an implicit assumption, that is, participants were automatically viewing these stimuli as self-relevant [@juechems_where_2019; @reicher_perception_2016] and threatening/rewarding because of their semantic meaning. In this explanation, we will view the moral concept, and the moral character represented by the concept, as objects and only judge whether they are rewarding/threatening or potentially rewarding/threatening to us. 
 
-If people view them self as morally good, and that moral character of others are categorized as good or bad, it's naturally that moral judgment is a grouping anchored at the core self. 
+Another possibility is that we will perceive those moral character as person and automatic categorize whether they are ingroup or ougroup, that is, the social categorization process. This account assumed that moral character served as a way to categorize other. In the first four experiments' situation, the identity of the moral character is ambiguous, participants may automatically categorize morally good people as ingroup and therefore preferentially processed these information. 
 
-Integrate self-categorization in moral judgment: an implicit good-me/good-person assumption (Role of self in attractor model)
+However, the above four experiments can not distinguish between these two possibilities, because the concept "good-peron" can both be rewarding and be categorized as ingroup memeber, and previous studies using associative learning paradigm revealed that both rewarding stimuli [e.g., @Sui_2012_JEPHPP] and in-group information [@enock_self_2018; enock_overlap_2020] are prioritized.  
 
-*self-categorization* and *variable self*
+[Distinguish two explanations by make self salient, exp3a, 3b, 6b] Though these two frameworks can both account for the positivity effect found in first four experiments (i.e., prioritization of "good-person", but not "neutral person" and "bad person"), they have different prediction if the experiment design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe both self and other. In this case the identity become salient and participants are less likely to spontaneously identify a good-person other than self as the extension of self, but the value of good-person still exists. Actually, the rewarding value of good-other might be even stronger than good-self because the former indicate potential cooperation and material rewards, but the latter is more linked to personal belief. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in @Hu_2020_GoodSelf, people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as "self" while all the others categories were excluded.
 
-## Social-categorization and perception
+In exp 3a, 3b, and 6b, we found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e. the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A mini-meta-analysis showed that there was no effect of valence when the identity is other. This results showed that value-based attention is not likely explained the pattern we observed in first four experiments. Why good-self is prioritized is less clear. Besides the social-categorization explanation, it's also possible that good self is so unique that it is prioritized in all possible situation and therefore is not social categorization per se. 
 
-[whether moral character information influence perception?, link to exp1a, b, c, and exp2] However, as @freeman_dynamic_2011 put it, the focus of the studies in person perception and moral self-concept is not to explain the perceptual process, rather, they are explaining the higher-order social cognitive processes that come after. That is, current studies on person perception are perception without perceptual process. Without knowledge of perceptual processes, we can not have a full picture of how moral information is processed in our cognition. As an increasing attention is paid to perceptual process underlying social cognition, it's clear that perceptual processes are strongly influenced by social factors, such as group-categorization, stereotype [see @xiao_perceiving_2016;@stolier_functional_2016]. Given the importance of moral character and that moral character related information has strong influence on learning and memory [@stanley_moral_2019; @carlson_motivated_2020], one might expect that moral character related information could also play a role in perceptual process.
-
-[using associative learning task to study the moral character's influence on perception] Though theoretically possible, no empirical studies had directly addressed this issue. There were only a few studies about the temporal dynamics of judging the trustworthiness of face [e.g., @dzhelyova_temporal_2012], but trustworthy is not equal to morality. One difficulty of studying moral character's influence on perceptual decision-making is that moral character is a high-level and hidden state instead of observable feature. usually, one needs necessary information, e.g., behavior history, to infer moral character of a person. For example, @anderson_visual_2011 asked participant to first study the behavioral description of faces and then asked participant to perform a perceptual detection task. They assumed that by learning the behavioral description of a person (represented by a face), participants could acquire the moral related information about that face, and this association would then bias the perceptual processing of the faces (but see @stein_no_2017). However, one drawback of this approach is that participants may differ greatly when inferring the moral character of the person from behavioral descriptions, given that notion what is morality itself is varying across population [@henrich_weirdest_2010] and those descriptions and faces may themselves are idiosyncratic, therefore, introduced large variation in experimental design.
-
-An alternative is to use abstract semantic concepts to study how these concepts influence perception. Abstract concepts of moral character is part of our daily life and it can be used to represent rich information. These abstract concepts is part of a dynamic network in which sensory cue, concrete behaviors and other information can activate/inhibit each other (e.g., aggressiveness) [@freeman_dynamic_2011; @amodio_social_2019]. If a concept of moral character (e.g., good person) is activated, it should also be able to influence on the perceptual process of the visual cues through the dynamic network, especially when the perceptual decision-making is about the concept-cue association. In this case, abstract concepts of moral character may serve as signal of moral reputation (for others) or moral self-concept. Indeed, previous studies used the moral words and found that moral related information can be perceived faster [@gantman_moral_2014, but see @firestone_enhanced_2015]. If moral character is an important in person perception, then, just as those other information such as races, education, [see @xiao_perceiving_2016], moral character related information might change the perceptual processes.
-
-## The current study
-
-To investigate the above possibility, we used an associative learning paradigm to study how moral character concept change perceptual decision-making. In this paradigm, simple geometric shapes were paired with different words whose dominant use is to describe the moral character of person. Participants first learn the associations between shapes and words, i.e. triangle is a good-person, i.e., building direct association between high-level, hidden moral characters and visual cues. After remembered the associations, they perform a matching task to judge whether the shape-word pair presented on the screen match the association they learned. This paradigm has been used in studying the perceptual process of self-concept, but had also proven useful in studying other concepts like social group [@enock_self_2018]. By using simple and morally neutral shapes, we controlled the variations caused by visual cues.
-
-Our first question is, whether the words used the in the associative paradigm is really related to the moral character? As we reviewed above, previous theories, especially the interactive dynamic theory, would support this assumption. To validate that moral character concepts activated moral character as a social cue, we used four experiments to explore and validate the paradigm. The first experiment direct adopted associative paradigm and change the words from "self", "other" to "good-person", "neutral-person", and "bad-person". Then, we change the words to the ones that have more explicit moral meaning ("kind-person", "neutral-person", and "evil-person"). Then, as in @anderson_visual_2011, we asked participant to learn the behavioral history of three different names, and then use the names, as moral character words, for associative learning. Finally, we also tested that simultaneously present shape-word pair and sequentially present word and shape didn't change the pattern. All of these four experiments showed a robust effect of moral character, that is, the positive moral character associated stimuli were prioritized. 
-
-[possible explanations: person-based self-categorization vs. stimuli-based valence] Then, we explored the underlying mechanism. One possible explanation is the value-based attention, which suggested that valuable stimuli is prioritized in our low-level cognitive processes. Because positive moral character is potentially rewarding, e.g., potential cooperators, it is valuable to individuals and therefore being prioritized. There are also evidence consistent with this idea []. For example, XXX found that trustworthy faces attracted attention more than untrustworthy faces, probably because trustworthy faces are more likely to be the collaborative partners subsequent tasks, which will bring reward. This explanation has an implicit assumption, that is, participants were automatically viewing these stimuli as self-relevant [@juechems_where_2019; @reicher_perception_2016] and threatening/rewarding because of their semantic meaning. In this explanation, we will view the moral concept, and the moral character represented by the concept, as objects and only judge whether they are rewarding/threatening or potentially rewarding/threatening to us. A different view is that we will perceive those moral character as person and apply social categorization, i.e., we categorize whether the person with the moral character is in the same group as we do [@turner_self_1994]. However, the above four experiments can not distinguish between these two possibilities, because there are evidence for both reward- [e.g., @Sui_2012_JEPHPP] and in-group [@enock_self_2018] prioritization.  
-
-[Distinguish two explanations by make self salient, exp3a, 3b, 6b] Though these two frameworks can both account for the positivity effect found in first four experiments (i.e., prioritization of "good-person", but not "neutral person" and "bad person"), they have different prediction if the experiment design include both identity and moral valence where the valence (good, bad, and neutral) conditions can describe both self and other. In this case the identity become salient and participants are less likely to spontaneously identify a good-person other than self as in-group, but the value of good-person still exists. This means that the social categorization theory predicts participants prioritize good-self but not good-other, while reward-based attention theory predicts participants are both prioritized. Also, as in @Hu_2020_GoodSelf, people may also only identify with good-self instead of bad self. That is, people will show a unique pattern of self-identification: only good-self is identified as "self" while all the others categories were excluded.
-
-In exp 3a, 3b, and 6b, we found that (1) good-self is always faster than neutral-self and bad-self, but good-other only have weak to null advantage to neutral-other and bad-other. which mean the social categorization is self-centered. (2) good-self's advantage over good other only occur when self- and other- were in the same task. i.e. the relative advantage is competition based instead of absolute. These three experiments suggest that people more like to view the moral character stimuli as person and categorize good-self as an unique category against all others. A mini-meta-analysis showed that there was no effect of valence when the identity is other.
-
-[what we care? valence of the self exp4a or identity of the good exp4b?] Next, we go further to disentangle the good-self complex: people care more about whether the self is good, or whether the good is self, or both? If people care more about whether the self is good, then, subtle cue of the valence may have an impact on perceptual process of the self. In contrast, if people care more about whether the good's identity, i.e., whether the good is self, then subtle cue of identity (self v. other) may have a impact on perceptual process of the good. We tested the good-self complex with two more experiments. In exp 4a (id is task-relevant, valence is task-irrelevant), if people care about the valence of the self, then, the task-irrelevant information may influence the processing of the self. While in exp 4b (valence is task-relevant, id is task-irrelevant), if people care about the id of the good, then, the task-irrelevant id information will has a influence on the process of the good.
+[what we care? valence of the self exp4a or identity of the good exp4b?] We go further to disentangle the good-self complex: is it because the special role of good-self or because of social categorization. We designed two complementary experiments. in experiment 4a, participants only learned the association between self and other, the words "good-person", "neutral person", and "bad person" were presented as task-irrelevant stimuli, while in experiment 4b, participants learned the associations between "good-person", "neutral-person", and "bad-person", and the "self" and "other" were presented as task-irrelevant stimuli. These two experiment can be used to distinguish the "good-self" as anchor account and the "good-self-based social categorization" account. If good-self as an anchor is true, then, in both experiment, good-self will show advantage over other stimuli. More specifically, in experiment 4a, in the self condition, there will be advantage for good as task-irrelevant condition than the other two self conditions; in experiment 4b, in the good condition, there will be an advantage for self as task-irrelevant condition over other as task-irrelevant condition. If good-self-based social categorization if true, then, the prioritization effect will depends on whether the stimuli can be categorized as the same group of good-self. More specifically, in experiment 4a, there will be good-as-task-irrelevant stimuli than other condition in self conditions, this prediction is the same as the "good-self as anchor" account; however, for experiment 4b, there will be no self-as-task-irrelevant stimuli than other-as-task-irrelevant condition.
 
 [Good self in self-reported data] As an exploration, we also collected participants' self-reported psychological distance between self and good-person, bad-person, and neutral-person. We explored the general pattern and the correlation between self-reported distance and reaction-based indices.
 
 [whether categorize self as positive is not limited to morality] Finally, we explored the pattern is generalized to all positive traits or only to morality. We found that self-categorization is not limited to morality, but a special case of categorization in perpetual processing. 
 
 Key concepts and discussing points:
-*Self-categories* are cognitive groupings of self and some class of stimuli as identical or different from some other class. [Turner et al.]
-*Personal identity* refers to self-categories that define the individual as a unique person in terms of his or her individual differences from other (in-group) persons.
-*Social identity* refers to the shared social categorical self ("us" vs. "them").
-*variable self*: Who we are, how we see ourselves, how we define our relations to others (indeed whether they are construed as ‘other’ or as part of the extended 'we' self) is different in different settings. 
-*Identification*: the degree to which an individual feels connected to an ingroup or includes the ingroup in his or her self-concept. (self is not bad; )
-Morality as a way for social-categorization? People are more likely to identify themselves with trustworthy faces [@verosky_differential_2010] (trustworthy faces has longer RTs).
+
+**Self-categories** are cognitive groupings of self and some class of stimuli as identical or different from some other class. [Turner et al.]
+
+**Personal identity** refers to self-categories that define the individual as a unique person in terms of his or her individual differences from other (in-group) persons.
+
+**Social identity** refers to the shared social categorical self ("us" vs. "them").
+
+**Variable self**: Who we are, how we see ourselves, how we define our relations to others (indeed whether they are construed as ‘other’ or as part of the extended 'we' self) is different in different settings. 
+
+**Identification**: the degree to which an individual feels connected to an ingroup or includes the ingroup in his or her self-concept. (self is not bad; )
+
+Morality as a way for social-categorization [@mchugh_moral_2019]? People are more likely to identify themselves with trustworthy faces [@verosky_differential_2010] (trustworthy faces has longer RTs).
+
 What is the relation between morally good and self in a semantic network (attractor network) (Freeman & Ambady, 2011).
+
 How to deal with the *variable self* (self-categorization theory) vs. *core/true/authentic self* vs. *self-enhancement*
 
 **Limitations**:
